--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,54 @@
-button { font-size: 14px; }
+.modal {
+  position: fixed;
+  justify-content: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 600px;
+  max-width: 100%;
+  height: 400px;
+  max-height: 100%;
+  padding: 10px;
+  box-shadow:
+        inset
+              0 -3em 3em rgba(240, 255, 0, 0.3),
+              0 0 0 2px rgb(255, 0, 255, 0.1),
+              2em 2em 3em rgba(0,0,0,0.4);
+  border-radius: 0.5em;
+}
+
+/* may need to add top left and width */
+.scrollable {
+  postion: absolute;
+  height: 100%;
+  padding: 20px 50px 20px 20px;
+  overflow: auto;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  row-gap: 30px;
+}
+
+.first-child {
+  place-self: center;
+  padding: 5px 0 0 0;
+  background-color: rgba(200, 0, 0, 0.2);
+}
+
+.second-child {
+  place-self: center;
+  background-color: rgba(200, 200, 0, 0.2);
+  padding: 0 10px 0 10px;
+}
+
+.third-child {
+  place-self: center;
+  align-self: end;
+  padding: 50px 0 0 0;
+  /* background-color: rgba(200, 0, 0, 0.9); */
+}
+
+button { font-size: 20px; }
