--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,12 @@ button { font-size: 20px; }
 /* ========== pages ========== */
 .page-grid-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   border: solid red;
   row-gap: 30px;
 }
 
+/* left column */
 .first-page-child {
   /* display: flex; */
   /* place-self: start;
@@ -62,38 +63,48 @@ button { font-size: 20px; }
 }
 
 .second-page-child {
-  place-self: center;
+  /* place-self: center;
   background-color: rgba(200, 200, 0, 0.2);
-  padding: 0 10px 0 10px;
+  padding: 0 10px 0 10px; */
 }
 
 /* just for the start page button */
 .third-page-child {
+  /* order: 2;
   place-self: center;
   align-self: end;
   padding: 50px 0 0 0;
-  background-color: rgba(200, 0, 0, 0.9);
+  background-color: rgba(200, 0, 0, 0.9); */
 }
 
+/* right column */
+.right-column {
+  display: flex;
+}
+
+
+
+
 .fourth-page-child {
-  place-self: center;
+  align-self: flex-end;
+  /* place-self: center;
   align-self: end;
   padding: 50px 0 0 0;
-  background-color: rgba(200, 0, 0, 0.9);
+  background-color: rgba(200, 0, 0, 0.9); */
 }
 
 .fifth-page-child {
-  place-self: center;
+  /* place-self: center;
   align-self: end;
   padding: 50px 0 0 0;
-  background-color: rgba(200, 0, 0, 0.9);
+  background-color: rgba(200, 0, 0, 0.9); */
 }
 
 .sixth-page-child {
-  place-self: center;
+  /* place-self: center;
   align-self: end;
   padding: 50px 0 0 0;
-  background-color: rgba(200, 0, 0, 0.9);
+  background-color: rgba(200, 0, 0, 0.9); */
 }
 
 /* ========== death ==========
