--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 /* ========== general styles ========== */
 button { font-size: 20px; }
 
+ul {
+  list-style: none;
+}
+
 /* ========== modal ========== */
 .modal {
   position: fixed;
@@ -16,7 +20,7 @@ button { font-size: 20px; }
   box-shadow:
         inset
               0 -3em 3em rgba(240, 255, 0, 0.3),
-              0 0 0 2px rgb(255, 0, 255, 0.1),
+              0 0 0 2px rgba(255, 0, 255, 0.1),
               2em 2em 3em rgba(0,0,0,0.4);
   border-radius: 0.5em;
 }
@@ -25,14 +29,22 @@ button { font-size: 20px; }
 div#start-page {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 380px;
 }
 
-/* ===== general page styles ===== */
-.left-column {
+div.title-sector {
 
 }
 
-.right-column {
+div.content-sector {
+  margin-bottom: 40px;
+  padding: 0 20px 0 20px;
+
+}
+
+div.button-sector {
 
 }
 
@@ -40,7 +52,9 @@ div#start-page {
 /* ===== pages 1 - ?  ===== */
 div#page-one {
   display: none;
-  border-radius: solid red;
+  flex-direction: row;
+  height: 380px;
+  /* border: solid red; */
 }
 
 div#page-two {
@@ -59,6 +73,66 @@ div#end {
   display: none;
 }
 
+
+/* ===== general page styles ===== */
+.left-column {
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+align-items: center;
+}
+
+/* left column items */
+div.first {
+  align-self: center;
+  background: linear-gradient(rgba(207, 0, 15, 0.8), rgba(255,255,255, 1));
+  margin: 5px 0 10px 5px;
+  padding: 0 50px 5px 50px;
+}
+
+div.second {
+  padding: 5px 20px 2px 5px;
+  margin-left: 5px;
+  border: 1px solid rgba(255, 0, 255, 0.3);
+  border-radius: 0.5em;
+  box-shadow: 1em 1em 0 2px rgba(82, 179, 217, 0.3);
+  background: repeating-linear-gradient(
+      45deg,
+      rgba(255, 0, 255, 0.1),
+      rgba(255, 0, 255, 0.1) 20px,
+      rgba(240, 255, 0, 0.1) 20px,
+      rgba(240, 255, 0, 0.1) 40px
+    );
+}
+
+div.third {
+
+}
+
+.right-column {
+display: flex;
+flex-direction: column;
+justify-content: flex-end;
+}
+
+/* right column items */
+div.fourth {
+  height: 90%;
+  margin: 5px 5px 15px 40px;
+  padding: 0 10px 0 10px;
+  background: linear-gradient(rgba(244, 179, 80, 1), rgba(255,255,255, 1));
+  /* overflow: scroll; */
+
+}
+
+div.fifth {
+  display: flex;
+  flex-direction: row;
+  margin-right: 30px;
+  padding-left: 100px;
+  justify-content: space-between;
+  align-items: flex-end;
+}
 
 /* .second {
   overflow: scroll;
